syntax = "proto3";

package ppbapi;

import "google/protobuf/timestamp.proto";

option go_package = "social_network/post-service/ppbapi";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc DeletePost(DeletePostRequest) returns (Empty) {}
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {}
  rpc GetPostsByHashtag(GetPostsByHashtagRequest) returns (GetPostsByHashtagResponse) {}

  rpc CreateHashtag(CreateHashtagRequest) returns (CreateHashtagResponse) {}
  rpc GetHashtag(GetHashtagRequest) returns (GetHashtagResponse) {}
  rpc AddHashtagToPost(AddHashtagToPostRequest) returns (Empty) {}
}


message Empty {}


message CreatePostRequest {
  int64 userID = 1;
  string description = 2;
  repeated int64 hashtagsID = 3;
}

message CreatePostResponse {
  int64 id = 1;
}

message DeletePostRequest {
  int64 id = 1;
}

message GetPostRequest {
  int64 id = 1;
}

message GetPostResponse {
  int64 userID = 1;
  string description = 2;
  repeated int64 hashtagsID = 3;
  google.protobuf.Timestamp createdAt = 4;
}

message GetPostsByHashtagRequest {
  int64 hashtagID = 1;
  enum DIRECTION {
    FIRST = 0;
    NEXT = 1;
    PREV = 2;
  }
  DIRECTION direction = 2;
  int64 postOffsetID = 3;
  int64 limit = 4;
}

message GetPostsByHashtagResponse {
  repeated Post posts = 1;
}

message Post {
  int64 id = 1;
  int64 userID = 2;
  string description = 3;
  repeated int64 hashtagsID = 4;
  google.protobuf.Timestamp createdAt = 5;
}



message CreateHashtagRequest {
  string name = 1;
}

message CreateHashtagResponse {
  int64 id = 1;
}

message GetHashtagRequest {
  int64 id = 1;
}

message GetHashtagResponse {
  Hashtag hashtag = 1;
}



message AddHashtagToPostRequest {
  int64 postID = 1;
  int64 hashtagID = 2;
}

message Hashtag {
  int64 id = 1;
  string name = 2;
}
